--- a/docs/src/styles/index.scss
+++ b/docs/src/styles/index.scss
@@ -21,8 +21,13 @@
 @import "../../node_modules/bootstrap/scss/card";
 @import "../../node_modules/bootstrap/scss/tables";
 @import "../../node_modules/bootstrap/scss/nav";
+@import "../../node_modules/bootstrap/scss/navbar";
 
 // 5. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../node_modules/bootstrap/scss/utilities/api";
 
+@import "../../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 // 6. Add additional custom code here
+html {
+    overflow-y: scroll;
+}
