--- a/docs/src/styles/index.scss
+++ b/docs/src/styles/index.scss
@@ -32,3 +32,18 @@
 html {
     overflow-y: scroll;
 }
+
+// refer to https://www.w3schools.com/howto/howto_css_loader.asp
+.loader {
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid $primary;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+}
+  
+@keyframes spin {
+    0% { transform: rotate(0deg) }
+    100% { transform: rotate(360deg) }
+}
